--- a/style.css
+++ b/style.css
@@ -3,13 +3,10 @@
     padding: 0;
     margin: 0;
     color: #131214;
-    
-    
 }
 
 
-/* <!-- ====================================== navbar ====================================== --> */
-
+/* <!-- ====================================== navbar start ====================================== --> */
 .navbar{
     display: flex;
     flex-direction: row;
@@ -17,7 +14,6 @@
     padding: 10px 30px 10px 30px;
     /* top | right | bottom | left */
     justify-content: space-between;
-    
     font-family: 'Gilroy-Bold'
 }
 
@@ -32,7 +28,6 @@
 .ph-number{
     display: flex;
     align-items: center;
-
 }
 
 .nav-item{
@@ -41,13 +36,15 @@
     justify-content: space-between;
 }
 
-/* <!-- ====================================== navbar ====================================== --> */
 nav ul li{
     list-style: none;
     display: inline-block;
-    }
-    
-/* <!-- ====================================== hero ====================================== --> */
+}
+
+/* <!-- ====================================== navbar end ====================================== --> */
+
+
+/* <!-- ====================================== hero start ====================================== --> */
 .hero-header{
     font-size: 54px;
     font-weight: bolder;
@@ -74,10 +71,10 @@ nav ul li{
 
 .hero{
     display: grid;
-    grid-template-columns: 60px 50% 615px;
+    grid-template-columns: 60px 50%;
     grid-template-rows: 500px;
     grid-template-areas: ". txt foto";
-    margin: 150px auto 150px auto;
+    margin: 150px auto 60px auto;
     /* top | right | bottom | left */
 }
 
@@ -92,10 +89,10 @@ nav ul li{
 .hero-img img{
     width: 100%;
 }
-/* <!-- ====================================== hero ====================================== --> */
+/* <!-- ====================================== hero end ====================================== --> */
 
 
-/* <!-- ====================================== sponsor ====================================== --> */
+/* <!-- ====================================== sponsor start ====================================== --> */
 .sponsor img{
     height: 40px;
     margin-left: 50px;
@@ -109,6 +106,9 @@ nav ul li{
     margin-bottom: 200px;
 }
 
+/* <!-- ====================================== sponsor end ====================================== --> */
+
+
 /* <!-- ====================================== media querry ====================================== --> */
 @media (max-width: 767px){
     .web-logo{
@@ -120,26 +120,32 @@ nav ul li{
     }
     
     nav ul li{
-        display: block;
+        display: none;
     }
+    
     .hero{
         display: block;
         /* width: 100%; */
+    }
+    .hero-btn{
+    width: 430px;
+    margin-left: 0px;
+    margin-right: 8px;
+    margin-bottom: 50px;
     }
     .hero-txt{
         margin-left: 30px;
         margin-right: 30px;
     }
-    .hero-img{
-        width: 800px;
-    }
-    .hero-btn{
-    margin-left: 180px;
-    margin-right: 130px;
-    margin-bottom: 50px;
-    }
+    /* .hero-img{
+        margin-left: 0%;
+        margin-right: 0%;
+    } */
     .sponsor{
-        display: block;
+        overflow: hidden;
     }
-
+    svg{
+        width: 16px;
+        height: 16px;
+    }
 }
